--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "primeng",
-  "version": "11.4.3",
+  "version": "11.4.4",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/primefaces/primeng.git"
+    "url": "https://github.com/ne3Vubeki/primeng.git"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.1",
