--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "codelyzer": "^6.0.0",
     "del": "^2.2.0",
     "file-saver": "^2.0.2",
-    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.2.0",
     "gulp-rename": "^1.2.2",
@@ -62,12 +61,13 @@
     "protractor": "~7.0.0",
     "quill": "1.3.7",
     "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
     "ts-node": "~8.3.0",
+    "tslib": "^2.0.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2",
     "web-animations-js": "^2.3.2",
     "xlsx": "^0.15.1",
     "zone.js": "~0.10.2"
-  }
+  },
+  "dependencies": {}
 }
